Doc: Attempted to fix table a header alignment problem.
Task-number: QTBUG-13591

--- a/doc/templates/style/offline.css
+++ b/doc/templates/style/offline.css
@@ -126,13 +126,13 @@
     }
     th
     {
-        padding: 0.5em 1.5em 0.5em 1.5em;
+        padding: 0.5em 1.5em 0.5em 1em;
         background-color: #E1E1E1;
         border-left: 1px solid #E6E6E6;
     }
     td
     {
-        padding: 0.25em 1.5em 0.25em 2em;
+        padding: 0.25em 1.5em 0.25em 1em;
     }
 
     td.rightAlign
