--- a/doc/templates/style/style.css
+++ b/doc/templates/style/style.css
@@ -152,7 +152,7 @@
     }
     td
     {
-        padding: 3px 15px 3px 20px;
+        padding: 3px 15px 3px 15px;
     }
     tr.odd td:hover,  tr.even td:hover    {}
         
